--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
 <p><span class="version">1.10</span> 合成器被原版红石元件强充能时会停止工作。任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。下方为输出方向按钮，使用左键或Q键切换，若输出方向有<abbr title="漏斗、投掷器、发射器、箱子、木桶、潜影盒">容器</abbr>且容器不满时，会将输出栏物品转移到容器中。</p>
 
 <h3 id="多功能一体机">多功能一体机 <code>cpp:all_in_one_machine</code></h3>
-<table><thead><tr><th>材料</th><th>合成配方</th><th>说明</th>
+<table><thead><tr><th>材料</th><th>合成配方</th>
 </tr></thead><tbody>
 <tr><td><a href="#附魔铁锭">附魔铁锭</a>+<a href="#附魔金锭">附魔金锭</a>+熔炉+木桶+<a href="#泥土之魂">泥土之魂</a></td>
 	<td><span class="ui cm" title="合成器">
@@ -3568,7 +3568,7 @@
 <p><span class="oldversion">1.9.x</span> 若下方为4级信标，每秒恢复64米内玩家1点魔法值，上限60点。若信标矿物块塔的顶层为X形的5个日石和4个月石，则额外每秒恢复128米内玩家1点魔法值，上限100点。</p>
 
 <h3 id="金砧">金砧 <code>cpp:golden_anvil</code></h3>
-<table><thead><tr><th>材料</th><th>合成配方</th><th>说明</th></tr></thead><tbody>
+<table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#附魔金锭">附魔金锭</a>+铁砧+木桶</td>
 	<td><span class="ui cm" title="合成器">
 		<a href="#附魔金锭" class="ci enchanted_gold" title="附魔金锭"></a>
@@ -5558,7 +5558,7 @@
 </tbody></table>
 
 <h3 id="无尽桶">无尽桶 <code>cpp:infinite_bucket</code></h3>
-<p>右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。</p>
+<p><span class="version">1.10</span> 右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#附魔铁锭">附魔铁锭</a</td>
 	<td><span class="ui cm" title="合成器">
@@ -5577,7 +5577,7 @@
 
 <h3 id="消音器">消音器 <code>cpp:muffler</code></h3>
 <p><span class="version">1.10</span> 右键或放置在物品展示框内时，附近16米内的生物会被永久消声。</p>
-<p><span class="oldversion">1.9.x</span> 附近5米内的生物会被永久消声。</p>
+<p><span class="oldversion">1.9.x</span> 放置后附近5米内的生物会被永久消声。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td>铁锭+燧石+湿海绵</td>
 	<td><span class="ui cm" title="合成器">
@@ -5595,7 +5595,7 @@
 </tbody></table>
 
 <h3 id="剪枝器">剪枝器 <code>cpp:grafter</code></h3>
-<p><span class="version">1.9起</span> 破坏树叶必定掉落树苗。每次使用消耗2点耐久，共132点耐久。</p>
+<p>破坏树叶必定掉落树苗。每次使用消耗2点耐久，共132点耐久。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#附魔铁锭">附魔铁锭</a>+木棍</td>
 	<td><span class="ui cm" title="合成器">
@@ -5613,7 +5613,7 @@
 </tbody></table>
 
 <h3 id="玻璃镐">玻璃镐 <code>cpp:glass_pickaxe</code></h3>
-<p><span class="version">1.9起</span> 无需精准附魔即可采集玻璃，共132点耐久。</p>
+<p>无需精准附魔即可采集玻璃，共132点耐久。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td>玻璃+木棍</td>
 	<td><span class="ui cm" title="合成器">
@@ -5631,7 +5631,7 @@
 </tbody></table>
 
 <h3 id="搬箱器">搬箱器 <code>cpp:chest_transporter</code></h3>
-<p><span class="version">1.9起</span> Shift右键破坏箱子，箱子内的物品会保留。共26点耐久。</p>
+<p>Shift右键破坏箱子，箱子内的物品会保留。共26点耐久。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td>木棍+<a href="#附魔铁锭">附魔铁锭</a></td>
 	<td><span class="ui cm" title="合成器">
@@ -5649,7 +5649,7 @@
 </tbody></table>
 
 <h3 id="鞭炮">鞭炮 <code>cpp:firecrackers</code></h3>
-<p><span class="version">1.9起</span> 放置后生成一个即将爆炸的tnt，引线时长1.5秒。</p>
+<p>放置后生成一个即将爆炸的tnt，引线时长1.5秒。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td>火药+线+纸</td>
 	<td><span class="ui cm" title="合成器">
@@ -5707,7 +5707,7 @@
 <p><span class="version">1.10</span> 放置在物品展示框内时，若上方2格的2米内有骨粉且当前位置为：<br />小麦/甜菜根/胡萝卜/土豆/竹子/向日葵/丁香/玫瑰丛/牡丹/可可豆/甜浆果/海带/垂泪藤/扭曲藤，会消耗1个骨粉有几率生成相应作物的掉落物；<br />草/蕨/海草，以及3米内有剪刀时，会消耗1个骨粉和剪刀1点耐久并生成相应草的物品。</p>
 <p><span class="oldversion">1.9</span> 使用钻石锄合成。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+钻石锄+<a href="#钢化玻璃">钢化玻璃</a></td>
+<tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+下堺锄+<a href="#钢化玻璃">钢化玻璃</a></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="ci rare_earth_glass" title="稀土玻璃"></a>
 		<a class="ci enderman_head" title="末影人头"></a>
@@ -5726,7 +5726,7 @@
 <p>放置在物品展示框时，会破坏正上方的方块。</p>
 <p><span class="oldversion">1.9</span> 使用钻石镐合成。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+钻石稿+<a href="#钢化玻璃">钢化玻璃</a></td>
+<tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+下堺镐+<a href="#钢化玻璃">钢化玻璃</a></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="ci rare_earth_glass" title="稀土玻璃"></a>
 		<a class="ci enderman_head" title="末影人头"></a>
@@ -5763,7 +5763,7 @@
 <p><span class="version">1.10</span> 放置在物品展示框时，会杀死1.5米内的非boss非玩家生物。不受魔咒加成。</p>
 <p><span class="oldversion">1.9</span> 使用钻石剑合成。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+钻石剑+<a href="#钢化玻璃">钢化玻璃</a></td>
+<tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+下堺剑+<a href="#钢化玻璃">钢化玻璃</a></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="ci rare_earth_glass" title="稀土玻璃"></a>
 		<a class="ci enderman_head" title="末影人头"></a>
