--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 <h3 id="下载与安装">📦 下载与安装</h3>
 <p>更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">前往 github 页面查看</a>。其它链接：<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a>、<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>。</p>
-
+<p>注意20w11a mc本身有严重bug，请等待新快照再使用。</p>
 <table><thead><tr><th>支持的minecraft版本</th>
 	<th>Crafting++版本</th>
 	<th>下载地址</th></tr></thead>
@@ -383,9 +383,9 @@
 	</tr>
 	<tr>
 		<td>20w11a</td>
-		<td>测试版 v1.10-0314</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.10/v1.10-0314.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10-0314.zip">官方</a></td>
+		<td>测试版 v1.10-0318</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.10/v1.10-0318.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10-0318.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.14.x</td>
