--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 </ul></li>
 <li class="up6"><a href="#装饰"><span class="ci" style="background-position: -64px -384px;"></span> 装饰</a><ul>
 	<li><a href="#称号"><span class="ci" style="background-position: -16px -400px;"></span> 称号</a></li>
-	<li><a href="#皮革盔甲染色"><span style="background-position: -176px -16px;"></span> 皮革盔甲染色</a></li>
+	<li><a href="#皮革盔甲染色"><span class="ci" style="background-position: -0px -416px;"></span> 皮革盔甲染色</a></li>
 	<li><a href="#烈焰红唇"><span class="ci" style="background-position: -48px -384px;"></span> 烈焰红唇</a></li>
 	<li><a href="#紫色美瞳"><span class="ci" style="background-position: -0px -384px;"></span> 紫色美瞳</a></li>
 	<li><a href="#假睫毛"><span class="ci" style="background-position: -16px -384px;"></span> 假睫毛</a></li>
@@ -382,10 +382,10 @@
 		<td>开发中</td>
 	</tr>
 	<tr>
-		<td>20w11a</td>
-		<td>测试版 v1.10-0318</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.10/v1.10-0318.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10-0318.zip">官方</a></td>
+		<td>20w12a</td>
+		<td>测试版 v1.10-0319</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.10/v1.10-0319.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10-0319.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.14.x</td>
@@ -2503,12 +2503,7 @@
 <tr><td>16</td>
 	<td class="left">
 		<a class="ui packed_ice" title="浮冰"></a>
-		<a class="ui weeping_vines" title="垂泪藤"></a>
-		<a class="ui twisting_vines" title="扭曲藤"></a>
-		<a class="ui crimson_fungus" title="绯红菌"></a>
-		<a class="ui warped_fungus" title="诡异菌"></a>
 		<a class="ui melon_slice" title="西瓜片"></a>
-		<a class="ui stick" title="木棍"></a>
 	</td>
 </tr>
 <tr><td>8</td>
@@ -2517,9 +2512,8 @@
 		<a class="ui terracotta" title="陶瓦"></a>
 		<a class="ui orange_terracotta" title="彩色陶瓦"></a>
 		<a class="ui oak_sapling" title="树苗"></a>
-		<a class="ui crimson_roots" title="绯红菌索"></a>
-		<a class="ui warped_roots" title="诡异菌索"></a>
-		<a class="ui nether_sprouts" title="下界苗"></a>
+		<a class="ui crimson_fungus" title="绯红菌"></a>
+		<a class="ui warped_fungus" title="诡异菌"></a>
 		<a class="ui wheat_seeds" title="小麦种子"></a>
 		<a class="ui beetroot_seeds" title="甜菜种子"></a>
 	</td>
@@ -2543,6 +2537,10 @@
 		<a class="ui warped_nylium" title="诡异菌岩"></a>
 		<a class="ui gravel" title="砂砾"></a>
 		<a class="ui basalt" title="玄武岩"></a>
+		<a class="ui crimson_roots" title="绯红菌索"></a>
+		<a class="ui warped_roots" title="诡异菌索"></a>
+		<a class="ui nether_sprouts" title="下界苗"></a>
+		<a class="ui stick" title="木棍"></a>
 	</td>
 </tr>
 <tr><td>1</td>
@@ -2559,6 +2557,8 @@
 		<a class="ui end_stone" title="末地石"></a>
 		<a class="ui dead_bush" title="枯萎的灌木"></a>
 		<a class="ui snowball" title="雪球"></a>
+		<a class="ui weeping_vines" title="垂泪藤"></a>
+		<a class="ui twisting_vines" title="扭曲藤"></a>
 	</td>
 </tr>
 </tbody></table>
@@ -2650,8 +2650,8 @@
 	<td><a class="ui dark_oak_wood" title="深色橡木"></a></td>
 	<td><a class="ui crimson_stem" title="绯红菌柄"></a></td>
 	<td><a class="ui warped_stem" title="诡异菌柄"></a></td>
-	<td><a class="ui crimson_hyphae" title="绯红菌皮"></a></td>
-	<td><a class="ui warped_hyphae" title="诡异菌皮"></a></td>
+	<td><a class="ui crimson_hyphae" title="绯红菌核"></a></td>
+	<td><a class="ui warped_hyphae" title="诡异菌核"></a></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -2671,8 +2671,8 @@
 	<td><a class="ui stripped_dark_oak_wood" title="去皮深色橡木"></a></td>
 	<td><a class="ui stripped_crimson_stem" title="去皮绯红菌柄"></a></td>
 	<td><a class="ui stripped_warped_stem" title="去皮诡异菌柄"></a></td>
-	<td><a class="ui stripped_crimson_hyphae" title="去皮绯红菌皮"></a></td>
-	<td><a class="ui stripped_warped_hyphae" title="去皮诡异菌皮"></a></td>
+	<td><a class="ui stripped_crimson_hyphae" title="去皮绯红菌核"></a></td>
+	<td><a class="ui stripped_warped_hyphae" title="去皮诡异菌核"></a></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -2923,7 +2923,7 @@
 	<td></td>
 	<td></td>
 	<td></td>
-	<td></td>
+	<td><a class="ui basalt" title="玄武岩"></a></td>
 </tr>
 
 <tr>
@@ -2946,7 +2946,7 @@
 	<td></td>
 	<td></td>
 	<td></td>
-	<td></td>
+	<td><a class="ui polished_basalt" title="磨制玄武岩"></a></td>
 </tr>
 
 <tr>
@@ -2965,12 +2965,12 @@
 	<td><a class="ui yellow_terracotta" title="染色陶瓦"></a></td>
 	<td><a class="ui iron_ore" title="铁矿"></a></td>
 	<td><a class="ui gold_ore" title="金矿"></a></td>
+	<td><a class="ui nether_gold_ore" title="下界金矿石"></a></td>
 	<td><a class="ui quartz_block" title="石英块"></a></td>
 	<td><a class="ui sandstone" title="砂岩"></a></td>
 	<td><a class="ui red_sandstone" title="红砂岩"></a></td>
 	<td><a class="ui stone" title="石头"></a></td>
-	<td></td>
-	<td></td>
+	<td><a class="ui ancient_debris" title="远古残骸"></a></td>
 </tr>
 <tr><td><a class="ui glass" title="玻璃"></a></td>
 	<td><a class="ui glass" title="玻璃"></a></td>
@@ -2986,12 +2986,12 @@
 	<td><a class="ui yellow_glazed_terracotta" title="染色带釉陶瓦"></a></td>
 	<td><a class="ui iron_ingot" title="铁锭"></a></td>
 	<td><a class="ui gold_ingot" title="金锭"></a></td>
+	<td><a class="ui gold_ingot" title="金锭"></a></td>
 	<td><a class="ui quartz_block" title="平滑石英块"></a></td>
 	<td><a class="ui smooth_sandstone" title="平滑砂岩"></a></td>
 	<td><a class="ui smooth_red_sandstone" title="平滑红砂岩"></a></td>
 	<td><a class="ui smooth_stone" title="平滑石头"></a></td>
-	<td></td>
-	<td></td>
+	<td><a class="ui netherite_scrap" title="下界合金碎片"></a></td>
 </tr>
 
 <tr>
@@ -3063,7 +3063,7 @@
 	<td><a class="ui water_bucket" title="水桶"></a></td>
 	<td><a class="ui grass_block" title="草方块"></a></td>
 	<td><a class="ui mycelium" title="菌丝"></a></td>
-	<td colspan="3">对应的<span class="lore">64×</span>物品</td>
+	<td colspan="3">对应的重数+1物品</td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -5611,7 +5611,7 @@
 </tbody></table>
 
 <h3 id="剪枝器">剪枝器 <code>cpp:grafter</code></h3>
-<p>破坏树叶必定掉落树苗。每次使用消耗2点耐久，共132点耐久。</p>
+<p>破坏树叶必定掉落树苗，破坏地狱疣/诡异疣块可以得到绯红菌/诡异菌。每次使用消耗2点耐久，共132点耐久。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#附魔铁锭">附魔铁锭</a>+木棍</td>
 	<td><span class="ui cm" title="合成器">
@@ -5926,8 +5926,8 @@
 </ul>
 
 <p><span class="version">1.10</span></p>
-<ul><li>傀儡农民：内部拥有27格存储，会尝试捡起遇到的物品和遇到的陷阱箱物品，尝试将物品放入遇到的箱子内。破坏接触的<abbr title="树叶、木头、西瓜、南瓜、蘑菇方块、甘蔗、竹子、菌光体、菌柄、地狱疣块、诡异疣块">农业方块</abbr>、成熟的<abbr title="小麦、甜菜根、胡萝卜、马铃薯、甜浆果丛">作物</abbr>并消耗背包物品来补种。</li>
-<li>傀儡矿工：内部拥有27格存储，会尝试捡起遇到的物品和遇到的陷阱箱物品，尝试将物品放入遇到的箱子内。杀破坏接触的除控制方块外的所有方块。支持魔咒。</li>
+<ul><li>傀儡农民：内部拥有27格存储，会尝试捡起遇到的物品和遇到的陷阱箱物品，尝试将物品放入遇到的箱子内。破坏接触的<abbr title="树叶、木头、西瓜、南瓜、蘑菇方块、甘蔗、竹子、菌光体、菌柄、地狱疣块、诡异疣块">农业方块</abbr>、成熟的<abbr title="小麦、甜菜根、胡萝卜、马铃薯、甜浆果丛">作物</abbr>并消耗背包物品来补种。连续移动64米而没有遇到功能方块时，会掉头移动。</li>
+<li>傀儡矿工：内部拥有27格存储，会尝试捡起遇到的物品和遇到的陷阱箱物品，尝试将物品放入遇到的箱子内。杀破坏接触的除控制方块外的所有方块。支持魔咒。连续移动64米而没有遇到功能方块时，会掉头移动。</li>
 <li>傀儡渔夫：对着水放置，当所在位置不是水时掉落。接触水时会开始钓鱼，时长5-45秒，支持魔咒。钓鱼会积累经验并存储为附魔之瓶。</li>
 <li>傀儡战士：对着方块放置，当所在位置下方是空气时掉落。杀死1.5米内的非boss非玩家生物，支持魔咒。杀死生物会积累经验并存储为附魔之瓶。</li>
 <li>傀儡牧民：对着方块放置，当所在位置下方是空气时掉落。繁殖16米内的成年动物；将附近的鸡蛋砸掉；为16米内的羊剪毛；上方为红色羊毛/粉色羊毛/品红色羊毛时，会在附近动物达到24/48/96个或更多时杀死多余的成年动物。</li></ul>
@@ -9874,7 +9874,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-03-18</p>
+<p>最后更新 2020-03-19</p>
 </footer>
 
 </article>
