修复了世界之源

--- a/index.html
+++ b/index.html
@@ -1417,12 +1417,12 @@
 <p>默认情形机器只能使用常压常温模式，玩家需要使用插件Shift右键机器来解锁相应模式，包括：<a href="#低温插件">低温插件</a>、<a href="#低压插件">低压插件</a>、<a href="#高温插件">高温插件</a>、<a href="#高压插件">高压插件</a>。</p>
 
 <h4>高温高压</h4>
-<p>可以将两种不同的矿石混合烧炼并提高产出，不同的搭配拥有不同的倍率，倍率在模组首次加载时被确定，需要玩家测量参数以确定最佳组合。倍率为1.6~3.5倍，其中红石的基准数量为5，青金石的基准数量为6。</p>
+<p>可以将两种不同的矿石混合烧炼并提高产出，不同的搭配拥有不同的倍率，倍率在模组首次加载时被确定，需要玩家测量参数以确定最佳组合。倍率为1.0~4.0倍，其中红石的基准数量为5，青金石的基准数量为6。支持煤矿石/铁矿石/金矿石(下界金矿石)/红石矿石/青金石矿石/绿宝石矿石/钻石矿石/下界石英矿石。</p>
 
 <table>
 <thead><tr><th colspan="2">输入</th><th colspan="2">输出</th><th>经验</th><th>耗时</th></tr></thead><tbody>
 <tr><td colspan="2">任意两种矿石</td>
-	<td colspan="2">1.6~3.5倍对应矿物</td>
+	<td colspan="2">1.0~4.0倍对应矿物</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
@@ -2587,9 +2587,9 @@
 <p>每次工作时，工具若有耐久会消耗1点耐久，否则不会被消耗。工具可以是原版任意材质。</p>
 <p><span class="version">1.9.x</span> 配方略有差异。</p>
 
+<p>水桶/熔岩桶/空桶可以被合理的<a href="#无尽桶">无尽桶</a>代替，其中水桶+无尽桶会一次性把熔岩全部变成黑曜石。</p>
 <button style="display:none;cursor:pointer;" onclick="this.style.display='none';this.nextElementSibling.nextElementSibling.style.display='table';this.nextElementSibling.style.display='inline';">显示物品处理机配方表</button>
 <button onclick="this.style.display='none';this.nextElementSibling.style.display='none';this.previousElementSibling.style.display='inline';">隐藏物品处理机配方表</button>
-<p>水桶/熔岩桶/空桶可以合理的<a href="#无尽桶">无尽桶</a>代替，其中水桶+无尽桶会一次性把熔岩全部变成黑曜石。</p>
 <table style="background-color:#ccc;"><thead><tr>
 	<th colspan="21">配方</th>
 </tr></thead><tbody>
@@ -5944,8 +5944,8 @@
 
 <h3 id="圣诞礼物">圣诞礼物 <code>cpp:santa_gift</code></h3>
 <a class="ui ci santa_gift"></a>
-<p><span class="version">1.10</span>从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、附魔钻石和下界合金盔甲/工具/剑、钻石、下界合金锭、金苹果、附魔金苹果、<a href="#上古卷轴">上古卷轴</a>、钻石马铠和种子包。</p>
-<p><span class="oldversion">1.9.x</span>从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠和种子包。</p>
+<p><span class="version">1.10</span> 从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、附魔钻石和下界合金盔甲/工具/剑、钻石、下界合金锭、金苹果、附魔金苹果、<a href="#上古卷轴">上古卷轴</a>、钻石马铠和种子包。</p>
+<p><span class="oldversion">1.9.x</span> 从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠和种子包。</p>
 
 <h3 id="石制工具">石制工具</h3>
 <p><span class="oldversion">1.9.x</span> 花岗岩、安山岩、闪长岩或石头可代替圆石合成石制工具。</p>
