修复了杂交、末地门的错误，新增空岛使用骨粉产生野花，新增命令/trigger cppHome来设定自己的岛屿位置

--- a/index.html
+++ b/index.html
@@ -7549,8 +7549,7 @@
 <h3 id="花草">花草</h3>
 <p>新增34种花草，天然生成在主世界草方块上。</p>
 <p>前20种花草在合成器中合成为3个对应种子。一共4个生长阶段，成熟后收割可获得相应花草，否则只能获得种子。作物不受时运影响，可用骨粉催熟。每个花草都对应一个实体，大面积种植可能会卡顿。收获成熟的小麦、胡萝卜、马铃薯和甜菜根有5%几率获得六种花草种子，其余花草种子可以通过杂交得到：当一种作物将要生长成熟时，若邻近的花草可杂交，则有5%几率变异为其它花草。</p>
-
-<p><span class="oldversion">1.9.x</span>只有20种花草。</p>
+<p><span class="version">1.10</span> 后14种野花在空岛模式下可以通过对草方块使用骨粉得到。</p>
 <p>花草可在熔炉熔炼成其它物品，还可用于合成迷之炖菜，见下表。</p>
 
 <table><thead><tr><th>产物</th>
@@ -7826,91 +7825,91 @@
 	<td><code>cpp:calliopsis</code></td>
 	<td>-</td>
 	<td><a class="ui yellow_dye" title="黄色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci cyclamen"></a></td>
 	<th><strong id="仙客来">仙客来</strong></th>
 	<td><code>cpp:cyclamen</code></td>
 	<td>-</td>
 	<td><a class="ui magenta_dye" title="品红色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci iris"></a></td>
 	<th><strong id="鸢尾">鸢尾</strong></th>
 	<td><code>cpp:iris</code></td>
 	<td>-</td>
 	<td><a class="ui blue_dye" title="蓝色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci lilium_pumilum"></a></td>
 	<th><strong id="山丹丹">山丹丹</strong></th>
 	<td><code>cpp:lilium_pumilum</code></td>
 	<td>-</td>
 	<td><a class="ui red_dye" title="红色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci snowdrop"></a></td>
 	<th><strong id="雪滴花">雪滴花</strong></th>
 	<td><code>cpp:snowdrop</code></td>
 	<td>-</td>
 	<td><a class="ui white_dye" title="白色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci narcissus"></a></td>
 	<th><strong id="水仙">水仙</strong></th>
 	<td><code>cpp:narcissus</code></td>
 	<td>-</td>
 	<td><a class="ui light_gray_dye" title="淡灰色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci cole_flower"></a></td>
 	<th><strong id="油菜花">油菜花</strong></th>
 	<td><code>cpp:cole_flower</code></td>
 	<td>-</td>
 	<td><a class="ui yellow_dye" title="黄色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci lupine"></a></td>
 	<th><strong id="鲁冰花">鲁冰花</strong></th>
 	<td><code>cpp:lupine</code></td>
 	<td>-</td>
 	<td><a class="ui purple_dye" title="紫色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci crocu"></a></td>
 	<th><strong id="番红花">番红花</strong></th>
 	<td><code>cpp:crocu</code></td>
 	<td>-</td>
 	<td><a class="ui purple_dye" title="紫色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci pansy"></a></td>
 	<th><strong id="三色堇">三色堇</strong></th>
 	<td><code>cpp:pansy</code></td>
 	<td>-</td>
 	<td><a class="ui purple_dye" title="紫色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci arabia_speedwell"></a></td>
 	<th><strong id="阿拉伯婆婆纳">阿拉伯婆婆纳</strong></th>
 	<td><code>cpp:arabia_speedwell</code></td>
 	<td>-</td>
 	<td><a class="ui light_blue_dye" title="淡蓝色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci silene_pendula"></a></td>
 	<th><strong id="矮雪轮">矮雪轮</strong></th>
 	<td><code>cpp:silene_pendula</code></td>
 	<td>-</td>
 	<td><a class="ui pink_dye" title="粉色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
+	<td>-</td>
 </tr>
 <tr><td><a class="ui ci blue_rose"></a></td>
 	<th><strong id="蓝色妖姬">蓝色妖姬</strong></th>
 	<td><code>cpp:blue_rose</code></td>
 	<td>-</td>
 	<td><a class="ui blue_dye" title="蓝色染料"></a></td>
-	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td></tr>
+	<td>-</td></tr>
 </tbody></table>
 
 <h3 id="圣诞花">圣诞花 <code>cpp:poinsettia</code></h3>
@@ -9346,7 +9345,7 @@
 <!--==================================================================-->
 <h2 id="空岛">空岛</h2>
 <h3>1.10 版本空岛</h3>
-<p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。如果需要在普通世界开启本模块，请输入<code>/scoreboard players set $skyislandMode cppConfig 1</code>。空岛模式下不会生成模组的结构，不同玩家的间距默认为1000米。</p>
+<p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。如果需要在普通世界开启本模块，请管理员输入<code>/scoreboard players set $skyislandMode cppConfig 1</code>并移除所有人的进度。空岛模式下不会生成模组的结构，不同玩家的间距默认为1000米。</p>
 <p>玩家首次进入时，会生成一块基岩和一个包含1泥土、4橡树树苗、16骨粉的箱子。玩家破坏树叶会掉落骨粉和<strong>线</strong>，然后参考<a href="#其它原版物品">本模组原版物品合成变动</a>，使用线和8木棍合成<strong>雪球</strong>。
 <p>在堆肥桶上方放置雪块可将其变成<strong>发酵桶</strong>，类似于堆肥桶，放入各种植物或食物满了之后，会产出泥土。</p>
 <p>使用雪球和8泥土合成8<strong>圆石</strong>，制作<strong>熔炉</strong>，在熔炉上方放置雪块可将其变成<strong>方块破坏器</strong>，之后在其上方放置泥土/砂砾/圆石/石头/沙子/灵魂沙，然后右击方块破坏器可以打碎该方块。掉落物如下：</p>
@@ -9404,6 +9403,7 @@
 <p>方块破坏器下方的伸出的活塞臂收回时，会自动破坏方块破坏器上方的方块，以此实现<strong>自动刷矿</strong>。</p>
 <p>将12个绿宝石块摆成末地传送门框架的形状，然后点火即可得到<strong>末地传送门框架</strong>。</p>
 <p>玩家杀死生物时背包的砂土会变成<strong>灵魂土</strong>。</p>
+<p>如果需要前往他人岛屿，让管理员协助你传送过去，然后你使用<code>/trigger cppHome</code>来设置当前位置为你的空岛岛屿。</p>
 
 <h3>1.9 版本空岛</h3>
 <p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。如果需要在普通世界开启本模块，请输入<code>/scoreboard players set #skyislandMode cppValue 1</code>。</p>
