0321 修复了破坏之手配方错误的问题,修复了石英粉没有矿物辞典,修复了双台阶材质固定的问题

--- a/index.html
+++ b/index.html
@@ -1541,8 +1541,8 @@
 	<td>4</td>
 	<td>10</td>
 </tr>
-<tr><td><a class="ui clay"></a><a href="#盐瓶" class="ui ci bottle_of_salt"></a></td>
-	<td>粘土+<a href="#盐瓶">盐瓶</a></td>
+<tr><td><a class="ui clay_ball" title="粘土球"></a><a href="#盐瓶" class="ui ci bottle_of_salt"></a></td>
+	<td>粘土球+<a href="#盐瓶">盐瓶</a></td>
 	<td><a href="#稀土盐" class="ui ci rare_earth_salt"></a></td>
 	<td><a href="#稀土盐">稀土盐</a></td>
 	<td>4</td>
