橙色土之力可以破坏沙子灵魂土灵魂沙了,红色火不再可以直接烧炼矿石,但在物品处理机中可以溺尸和远古守卫者可以掉落三叉戟和海洋之心了

--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
 	</tr>
 	<tr>
 		<td>20w12a</td>
-		<td>测试版 v1.10-0322</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.10/v1.10-0322.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10-0322.zip">官方</a></td>
+		<td>测试版 v1.10-0323</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.10/v1.10-0323.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10-0323.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.14.x</td>
@@ -577,11 +577,16 @@
 <p>死亡时若着火不再掉落羽毛。死亡后额外掉落<code>0~1+0.5×抢夺等级</code>个鸡蛋。</p>
 
 <h3 id="哞菇">哞菇</h3>
-<p>哞菇死亡时会将下方灰化土变为菌丝，泥土变成灰化土。</p>
 <p>红色哞菇/棕色哞菇死亡时掉落<code>0~(2+抢夺等级)</code>个红色蘑菇/棕色蘑菇，同时掉落皮革数修改为<code>0~(1+抢夺等级)</code>。</p>
 
 <h3 id="僵尸猪人">僵尸猪人</h3>
 <p><span class="oldversion">1.9.x</span> 僵尸猪人死亡时掉落<code>0~(1+抢夺等级)</code>生猪排。</p>
+
+<h3 id="远古守卫者">远古守卫者</h3>
+<p><span class="version">1.10</span> 远古守卫者被玩家杀死时有<code>2.5%+抢夺等级×1%</code>几率掉落海洋之心。</p>
+
+<h3 id="溺尸">溺尸</h3>
+<p><span class="version">1.10</span> 溺尸被玩家杀死时有<code>2.5%+抢夺等级×1%</code>几率掉落三叉戟。</p>
 
 <h3 id="钓鱼">钓鱼</h3>
 <p>有几率掉到宝藏珊瑚、珊瑚扇、湿海绵、鳕鱼头/鲑鱼头/热带鱼头/河豚头、<a href="#水晶之心">水晶之心</a>和垃圾火药/海晶碎片。</p>
@@ -5360,7 +5365,7 @@
 <h3 id="白色电之力">白色电之力 <code>cpp:white_force_of_lightning</code></h3>
 <p><span class="version">1.10</span>根据脚下方块的不同，将附近15×15米的方块进行转化。</p>
 <table class="onlyicons"><tbody>
-	<tr><td><a class="ui dirt" title="橡树树苗"></a>→<a class="ui grass_block" title="草方块"></a>→<a class="ui stone" title="石头"></a>→<a class="ui sand" title="沙子"></a>→<a class="ui gravel" title="砂砾"></a>→<a class="ui podzol" title="灰化土"></a>→<a class="ui dirt" title="泥土"></a></td></tr>
+	<tr><td><a class="ui dirt" title="橡树树苗"></a>→<a class="ui grass_block" title="草方块"></a>→<a class="ui stone" title="石头"></a>→<a class="ui sand" title="沙子"></a>→<a class="ui gravel" title="砂砾"></a>→<a class="ui podzol" title="灰化土"></a>→<a class="ui mycelium" title="菌丝"></a>→<a class="ui dirt" title="泥土"></a></td></tr>
 	<tr><td><a class="ui ci water" title="水"></a>→<a class="ui ice" title="冰"></a>→<a class="ui ci water" title="水"></a></td></tr>
 	<tr><td><a class="ui ci lava" title="熔岩"></a>→<a class="ui obsidian" title="黑曜石"></a>→<a class="ui ci lava" title="熔岩"></a></td></tr>
 	<tr><td><a class="ui netherrack" title="地狱岩"></a>→<a class="ui crimson_nylium" title="绯红菌岩"></a>→<a class="ui warped_nylium" title="诡异菌岩"></a>→<a class="ui end_stone" title="末地石"></a>→<a class="ui netherrack" title="地狱岩"></a></td></tr>
@@ -9872,7 +9877,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-03-22</p>
+<p>最后更新 2020-03-23</p>
 </footer>
 
 </article>
