修复了信标增强仪不能对猪灵生效的问题。修复了傀儡掉落错误的问题。

--- a/index.html
+++ b/index.html
@@ -5949,7 +5949,7 @@
 
 <h3 id="圣诞礼物">圣诞礼物 <code>cpp:santa_gift</code></h3>
 <a class="ui ci santa_gift"></a>
-<p><span class="version">1.10</span> 从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、附魔钻石和下界合金盔甲/工具/剑、钻石、下界合金锭、金苹果、附魔金苹果、<a href="#上古卷轴">上古卷轴</a>、钻石马铠和种子包。</p>
+<p><span class="version">1.10</span> 从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、海洋之心、附魔钻石和下界合金盔甲/工具/剑、钻石、下界合金锭、金苹果、附魔金苹果、<a href="#上古卷轴">上古卷轴</a>、钻石马铠和种子包。</p>
 <p><span class="oldversion">1.9.x</span> 从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠和种子包。</p>
 
 <h3 id="石制工具">石制工具</h3>
