修复了经典画作和新春装饰合成问题，移除了红沙配方。

--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
 </tbody></table>
 <p>下载后解压缩。</p>
 <ul>
-<li><a style="font-weight:bold;">资源包</a>文件夹位于<code>.minecraft/resourcepacks</code>文件夹，该文件夹也可从游戏界面<code>选项->资源包->打开资源包文件夹</code>处打开。将<code>craftingpp_resources.zip</code>放入，然后进入选择资源包的页面，选择该资源包至右侧已选的资源包。如果仍然无法使用，请解压后放入。</li>
-<li><a style="font-weight:bold;">数据包</a>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将<code>craftingpp.zip</code>放入，然后退出世界重进。</li>
+<li><a style="font-weight:bold;">资源包</a>文件夹位于<code>.minecraft/resourcepacks</code>文件夹，该文件夹也可从游戏界面<code>选项->资源包->打开资源包文件夹</code>处打开。将<code>更多的合成资源包.zip</code>放入，然后进入选择资源包的页面，选择该资源包至右侧已选的资源包。如果仍然无法使用，请解压后放入。</li>
+<li><a style="font-weight:bold;">数据包</a>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将<code>更多的合成数据包.zip</code>放入，然后退出世界重进。</li>
 </ul>
 <p><span class="oldversion">1.9.x</span>请打开<code>选项->语言->强制使用Unicode字体：关</code>。</p>
 <ul>
@@ -592,7 +592,7 @@
 
 <h3 id="钓鱼">钓鱼</h3>
 <p>有几率掉到宝藏珊瑚、珊瑚扇、湿海绵、鳕鱼头/鲑鱼头/热带鱼头/河豚头、<a href="#水晶之心">水晶之心</a>和垃圾火药/海晶碎片。</p>
-<p><span class="version">1.10</span> 在下界钓鱼有几率钓到垃圾扭曲藤和缠怨藤；在末地钓鱼有几率钓到宝藏潜影壳。</p>
+<p><span class="version">1.10</span> 在下界钓鱼有几率钓到垃圾垂泪藤和缠怨藤；在末地钓鱼有几率钓到宝藏潜影壳。</p>
 
 <h3 id="玩家的头">玩家的头</h3>
 <p><span class="version">1.10</span> 玩家被手持抢夺附魔的武器杀死时会掉落头。</p>
@@ -1772,13 +1772,6 @@
 	<td>1</td>
 	<td>2.5</td>
 </tr>
-<tr><td><a class="ui nether_wart"></a><a class="ui sand"></a></td>
-	<td>地狱疣+沙子</td>
-	<td><a class="ui red_sand"></a></td>
-	<td>红沙 <span class="version">1.10</span></td>
-	<td>1</td>
-	<td>1</td>
-</tr>
 <tr><td><a class="ui soul_sand"></a><a class="ui dirt"></a></td>
 	<td>灵魂沙+泥土</td>
 	<td><a class="ui soul_soil"><span class="stack">2</span></a></td>
@@ -1862,7 +1855,7 @@
 	<td>2</td>
 </tr>
 <tr><td><a class="ui sugar_cane"></a><a href="#肥料" class="ui ci fertilizer"></a></td>
-	<td>可可豆仙人掌甘蔗蘑菇垂泪藤<br />扭曲藤藤蔓地狱疣睡莲花+<a href="#肥料">肥料</a></td>
+	<td>可可豆仙人掌甘蔗蘑菇垂泪藤<br />缠怨藤藤蔓地狱疣睡莲花+<a href="#肥料">肥料</a></td>
 	<td><a class="ui sugar_cane"><span class="stack">4</span></a></td>
 	<td>4 对应植物</td>
 	<td>2</td>
@@ -2566,7 +2559,7 @@
 		<a class="ui dead_bush" title="枯萎的灌木"></a>
 		<a class="ui snowball" title="雪球"></a>
 		<a class="ui weeping_vines" title="垂泪藤"></a>
-		<a class="ui twisting_vines" title="扭曲藤"></a>
+		<a class="ui twisting_vines" title="缠怨藤"></a>
 	</td>
 </tr>
 </tbody></table>
@@ -5728,7 +5721,7 @@
 </tbody></table>
 
 <h3 id="勤劳之手">勤劳之手 <code>cpp:industrious_hand</code></h3>
-<p><span class="version">1.10</span> 放置在物品展示框内时，若上方2格的2米内有骨粉且当前位置为：<br />小麦/甜菜根/胡萝卜/土豆/竹子/向日葵/丁香/玫瑰丛/牡丹/可可豆/甜浆果/海带/垂泪藤/扭曲藤，会消耗1个骨粉有几率生成相应作物的掉落物；<br />草/蕨/海草，以及3米内有剪刀时，会消耗1个骨粉和剪刀1点耐久并生成相应草的物品。</p>
+<p><span class="version">1.10</span> 放置在物品展示框内时，若上方2格的2米内有骨粉且当前位置为：<br />小麦/甜菜根/胡萝卜/土豆/竹子/向日葵/丁香/玫瑰丛/牡丹/可可豆/甜浆果/海带/垂泪藤/缠怨藤，会消耗1个骨粉有几率生成相应作物的掉落物；<br />草/蕨/海草，以及3米内有剪刀时，会消耗1个骨粉和剪刀1点耐久并生成相应草的物品。</p>
 <p><span class="oldversion">1.9.x</span> 使用钻石锄合成。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+下界合金锄+<a href="#钢化玻璃">钢化玻璃</a></td>
@@ -9401,7 +9394,7 @@
 	<a class="ui clay_ball" title="粘土球"><span class="stack">20%</span></a>
 	<a class="ui nether_wart" title="地狱疣"><span class="stack">10%</span></a>
 	<a class="ui blaze_powder" title="烈焰粉"><span class="stack">5%</span></a>
-	<a class="ui weeping_vines" title="扭曲藤"><span class="stack">5%</span></a>
+	<a class="ui weeping_vines" title="垂泪藤"><span class="stack">5%</span></a>
 	<a class="ui twisting_vines" title="缠怨藤"><span class="stack">5%</span></a>
 	<a class="ui crimson_roots" title="绯红菌索"><span class="stack">3%</span></a>
 	<a class="ui warped_roots" title="诡异菌索"><span class="stack">3%</span></a>
