移除了黑曜石插件。 现在多功能一体低温常压模式每次可以制造3个玄武岩。 修改了流星丸的模型位置以适应骑行。 修复了木镐、石镐、金镐不能连锁挖掘下界金矿石的问题。 修复了钻石镐、下界合金镐不能连锁挖掘远古残骸的问题。 修复了工具附加连环效果显示错误的问题。 修复了无尽桶在物品处理机的一个问题。 修复了连环效果的一个问题。 添加了梗体中文。

--- a/index.html
+++ b/index.html
@@ -383,15 +383,15 @@
 <tbody>
 	<tr>
 		<td>Java版快照 20w13a-20w13b</td>
-		<td>快照 v1.11-0328</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0328.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0328.zip">官方</a></td>
+		<td>快照 v1.11-0402</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0402.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0402.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.15.2</td>
 		<td>v1.10</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.x">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.x.zip">官方</a></td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.14.x</td>
@@ -1860,7 +1860,7 @@
 </tr>
 <tr><td><a class="ui pumpkin_seeds"></a><a href="#肥料" class="ui ci fertilizer"></a></td>
 	<td>南瓜种子+<a href="#肥料">肥料</a></td>
-	<td><a class="ui pumpkin_seeds"><span class="stack">2</span></a></td>
+	<td><a class="ui pumpkin"><span class="stack">2</span></a></td>
 	<td>2 南瓜</td>
 	<td>2</td>
 	<td>2</td>
@@ -2263,7 +2263,7 @@
 <tr><td><a class="ui lava_bucket"></a><a href="#黑曜石插件" class="ui ci obsidian_plugin"></a></td>
 	<td>熔岩桶+<a href="#黑曜石插件">黑曜石插件</a></td>
 	<td><a class="ui obsidian"></a><a class="ui bucket"></a></td>
-	<td>黑曜石+桶</td>
+	<td>黑曜石+桶 <span class="oldversion">1.9.x</span></td>
 	<td>4</td>
 	<td>10</td>
 </tr>
@@ -2297,8 +2297,8 @@
 </tr>
 <tr><td><a class="ui lava_bucket"></a><a class="ui blue_ice"></a></td>
 	<td>熔岩桶+蓝冰</td>
-	<td><a class="ui basalt"></a></td>
-	<td>玄武岩</td>
+	<td><a class="ui basalt"><span class="stack">3</span></a></td>
+	<td>3 玄武岩</td>
 	<td>1</td>
 	<td>1</td>
 </tr>
@@ -3866,7 +3866,8 @@
 		<a href="#附魔铁锭" class="ci enchanted_iron" title="附魔铁锭"></a>
 		<a class="ci obsidian_plugin" title="圆石插件"></a>
 	</span></td>
-	<td><code>cpp:obsidian_plugin</code><br />
+	<td><span class="oldversion">1.9.x</span><br />
+		<code>cpp:obsidian_plugin</code><br />
 		用于<a href="#多功能一体机">多功能一体机</a>低温常压模式下制造黑曜石。</td>
 </tr>
 <tr><th><strong id="地狱岩插件">地狱岩插件</strong></th>
@@ -10004,7 +10005,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-03-28</p>
+<p>最后更新 2020-04-02</p>
 </footer>
 
 </article>
